--- a/0x02-i18n/templates/7-index.html
+++ b/0x02-i18n/templates/7-index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
     <title>
-        {{ _('home_title') }}
+        {{home_title}}
     </title>
     <h1>
-        {{ _('home_header') }}
+        {{home_header}}
     </h1>
     {% if g.user %}
-        <p>{{ _('logged_in_as', username=g.user.name) }}</p>
-        <p>{{ _('current_time_is', current_time=get_timezone()) }} </p>
+        <p>{{logged_in_as}}</p>
+        <p>{{current_time_is}} </p>
     {% else %}
-        <p>{{ _('not_logged_in') }}</p>
+        <p>{{not_logged_in}}</p>
     {% endif %}
 </html>
